--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ install:
   - bundle install --path vendor/bundle
 
 script:
-  - bundle exec jekyll build -d builded
-
+  - bundle exec jekyll serve
 deploy:
   provider: pages
   skip_cleanup: true
