--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - bundle install --path vendor/bundle
 
 script:
-  - bundle exec jekyll serve
+  - bundle exec jekyll build -d builded
 deploy:
   provider: pages
   skip_cleanup: true
