--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 
 before_install:
   - gem install bundler
-  - gem install jekyll html-proofer
+  - gem install jekyll
 
 install:
   - bundle install --path vendor/bundle
