--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_install:
 install:
   - bundle install --path vendor/bundle
 
+before_script:
+  - rm -rf public
+
 script:
   - bundle exec jekyll build -d builded
 deploy:
